--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -25,7 +25,7 @@
           <div style="margin-left:15px" class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
             <a style="font-size:1em" class="navbar-brand brand-logo" href="index.html">Klasifikasi Berita Hoax
   </a>
-            <a class="navbar-brand brand-logo-mini" style="font-size:13px" href="index.html">SAW</a>
+            <a class="navbar-brand brand-logo-mini" style="font-size:13px" href="index.html">...</a>
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
               <span class="mdi mdi-sort-variant"></span>
             </button>
