--- a/templates/Dataset.html
+++ b/templates/Dataset.html
@@ -137,7 +137,8 @@
       search:true,
       pagination:true,
       height:500,
-  columns: [{
+  columns: [
+    {
     field: 'tweet',
     title: 'Tweet'
   }, {
