--- a/templates/Sidebar.html
+++ b/templates/Sidebar.html
@@ -14,6 +14,19 @@
         </a>
       </li>
       
+      <li class="nav-item {{'active' if selected=='preprocessing'}}">
+        <a class="nav-link" href="preprocessing">
+          <i class="mdi mdi-cached menu-icon"></i>
+          <span class="menu-title">Preprocessing</span>
+        </a>
+      </li>
+
+      <li class="nav-item {{'active' if selected=='pengujian'}}">
+        <a class="nav-link" href="pengujian">
+          <i class="mdi mdi-code-tags menu-icon"></i>
+          <span class="menu-title">Pengujian</span>
+        </a>
+      </li>
 
     </ul>
   </nav>
