--- a/templates/Pengujian.html
+++ b/templates/Pengujian.html
@@ -152,7 +152,7 @@
                                 <thead>
                                   <tr>
                                     <th>Tweet</th>
-                                    <th>Label</th>
+                                    <th>Predicted</th>
                                     <th>Actual</th>
                                   </tr>
                                 </thead>
