--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -86,7 +86,14 @@
               <div class="col-md-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body dashboard-tabs p-3">
-                    
+                        <div class="row">
+                              <div class="card" style="width: 18rem;">
+                                <div class="card-body">
+                                  <h5 class="card-title">Jumlah Dataset dalam Database</h5>
+                                  <h2>{{jumlahdataset}}</h2>
+                                </div>
+                              </div>
+                        </div>
                   </div>
                 </div>
               </div>
